@@ -8,6 +8,7 @@ zeit.brightcove changes
 - Nothing changed yet.
 - Added solr indexes for banner and banner-id (#7382).
 - Update videos "latest modified first" (#7209).
+- Add uniqueId to asset references (#7381).
 
 
 0.4.1 (2010-06-03)
